The "invisible" link does get rendered of course.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@23076 13f79535-47bb-0310-9956-ffa450edef68

--- a/howto/howto-asf-mirror.html
+++ b/howto/howto-asf-mirror.html
@@ -361,8 +361,9 @@
 <div class="label">Fixme (open)</div>
 <div class="content">
         There must be a better way to process extra documents, probably using
-        the Cocoon cli.xconf file. The invisible link trick is a fine
-        workaround because the link is not rendered into the final output.
+        the Cocoon cli.xconf file. The invisible link trick is not a good
+        workaround because the link is rendered into the final output and
+        can be crawled by robots.
       </div>
 </div>
 </div>
