--- a/howto/index.html
+++ b/howto/index.html
@@ -228,7 +228,7 @@
 <td colspan="2" height="1" bgcolor="#4C6C8F"><img height="1" width="1" alt="" src="../skin/images/spacer.gif" class="spacer"><a href="../skin/images/label.gif"></a><a href="../skin/images/page.gif"></a><a href="../skin/images/chapter.gif"></a><a href="../skin/images/chapter_open.gif"></a><a href="../skin/images/current.gif"></a></td>
 </tr>
 <tr>
-<td colspan="2" bgcolor="#CFDCED" class="copyright" align="center"><font size="2" face="Arial, Helvetica, Sans-Serif"><a href="http://www.apache.org/licenses/LICENSE-2.0">
+<td colspan="2" bgcolor="#CFDCED" class="copyright" align="center"><font size="2" face="Arial, Helvetica, Sans-Serif"><a href="http://www.apache.org/licenses/">
               Copyright &copy; 2002-2004&nbsp;
               The Apache Software Foundation.</a>
           All rights reserved.
@@ -239,7 +239,7 @@
 <tr>
 <td colspan="2" align="left" bgcolor="#CFDCED" class="logos">
 <div>
-<a href="http://validator.w3.org/check/referer"><img border="0" width="88" height="31" alt="Valid HTML 4.01!" src="../skin/images/valid-html401.png" class="logoImage"></a><a href="http://jigsaw.w3.org/css-validator/"><img border="0" width="88" height="31" alt="Valid CSS!" src="../skin/images/vcss.png" class="logoImage"></a><img alt="" height="1" width="10" src="../skin/images/spacer.gif"><a href="http://forrest.apache.org/"><img border="0" alt="Built with Forrest logo" src="../skin/images/built-with-forrest-button.png" width="88" height="31"><img height="1" width="5" alt="" src="../skin/images/spacer.gif" class="spacer"></a><a href="http://cocoon.apache.org/"><img border="0" alt="Built with Cocoon logo" src="../images/built-with-cocoon.gif" width="88" height="31"><img height="1" width="5" alt="" src="../skin/images/spacer.gif" class="spacer"></a>
+<a href="http://validator.w3.org/check/referer"><img border="0" width="88" height="31" alt="Valid HTML 4.01!" src="../skin/images/valid-html401.png" class="logoImage"></a><a href="http://jigsaw.w3.org/css-validator/"><img border="0" width="88" height="31" alt="Valid CSS!" src="../skin/images/vcss.png" class="logoImage"></a><img alt="" height="1" width="10" src="../skin/images/spacer.gif"><a href="http://forrest.apache.org/"><img border="0" alt="Built with Apache Forrest logo" src="../skin/images/built-with-forrest-button.png" width="88" height="31"><img height="1" width="5" alt="" src="../skin/images/spacer.gif" class="spacer"></a><a href="http://cocoon.apache.org/"><img border="0" alt="Built with Apache Cocoon logo" src="../images/built-with-cocoon.gif" width="88" height="31"><img height="1" width="5" alt="" src="../skin/images/spacer.gif" class="spacer"></a>
 </div>
 </td>
 </tr>
