--- a/mail-lists.html
+++ b/mail-lists.html
@@ -214,7 +214,7 @@
 <a href="#forrest-dev">Forrest Dev</a>
 </li>
 <li>
-<a href="#forrest-cvs">Forrest SVN</a>
+<a href="#forrest-svn">Forrest SVN</a>
 </li>
 <li>
 <a href="#Related+Mailing+Lists">Related Mailing Lists</a>
@@ -316,7 +316,7 @@
 </div>
 
     
-<a name="N1008C"></a><a name="forrest-cvs"></a>
+<a name="N1008C"></a><a name="forrest-svn"></a>
 <h3>Forrest SVN</h3>
 <div style="margin-left: 0 ; border: 2px">
 <p>Purpose: Receive notifications on changes in the Forrest codebase
@@ -371,7 +371,7 @@
 <td colspan="2" height="1" bgcolor="#4C6C8F"><img height="1" width="1" alt="" src="skin/images/spacer.gif" class="spacer"><a href="skin/images/label.gif"></a><a href="skin/images/page.gif"></a><a href="skin/images/chapter.gif"></a><a href="skin/images/chapter_open.gif"></a><a href="skin/images/current.gif"></a></td>
 </tr>
 <tr>
-<td colspan="2" bgcolor="#CFDCED" class="copyright" align="center"><font size="2" face="Arial, Helvetica, Sans-Serif"><a href="http://www.apache.org/licenses/LICENSE-2.0">
+<td colspan="2" bgcolor="#CFDCED" class="copyright" align="center"><font size="2" face="Arial, Helvetica, Sans-Serif"><a href="http://www.apache.org/licenses/">
               Copyright &copy; 2002-2004&nbsp;
               The Apache Software Foundation.</a>
           All rights reserved.
