--- a/src/forrestbot/webapp/src/webapp/welcome.html
+++ b/src/forrestbot/webapp/src/webapp/welcome.html
@@ -14,11 +14,8 @@
   limitations under the License.
 -->
 <p>
-This interface allows you to <b>build</b> a local copy of a project website (using 
-the latest docs from the project's CVS) and view it.  If it is acceptable, you can
+This interface allows you to <b>build</b> a copy of a project website (using 
+the latest project docs) and view it.  If it is acceptable, you can
 <b>deploy</b> it to the live site.
-</p>
-<p>
-To set up the Forrestbot Web Inteface for your own collection of projects, checkout the source and read README.txt
 </p>
 <hr>
