--- a/index.html
+++ b/index.html
@@ -23,10 +23,9 @@ Please note that this HTML file was _not_ created by Forrest.
    </head>
 
    <body>
-   <img src="src/documentation/resources/images/group-logo.gif" alt="xml-apache" />
-   <img src="src/documentation/resources/images/project-logo.gif" alt="forrest" />
+   <img src="src/documentation/resources/images/apache-forrest.png" alt="forrest" />
    <br />
-   &gt;<a href="http://www.apache.org/" class="title">Apache</a>
+   <a href="http://www.apache.org/" class="title">Apache</a>
    &gt;<a href="http://xml.apache.org/" class="title">XML</a>
    &gt;<a href="http://forrest.apache.org/" class="title">Forrest</a>
 
@@ -60,21 +59,22 @@ Please note that this HTML file was _not_ created by Forrest.
     <p>Type <pre>   'forrest run'</pre> in this top-level directory.
       You can then point your browser to 
       <a href="http://localhost:8888/">http://localhost:8888/</a>
-      and view the Forrest website generated dynamically. Experiment with
-      editing docs in 
-      <pre>   src/documentation/content/xdocs/</pre> and watch them be
-      instantly rendered.
+      and view the Forrest website generated dynamically.
      </p>
 
       <h3>Generate your own site</h3>
       <p>Create a new (empty) directory in your home space, cd to it, and type
        <pre>   'forrest seed'</pre> 
-         This will generate a skeleton directory structure and template XML. 
-         If you like, edit the XML in
-         <pre>   src/documentation/content/xdocs/</pre>
-         Now type <pre>   'forrest'</pre> to render your new site,
-         or <pre>   'forrest run'</pre>
-         to generate a <a href="http://localhost:8888/">webapp</a>.</p>
+       This will generate a skeleton directory structure and template XML. 
+       If you like, edit the XML in
+       <pre>   src/documentation/content/xdocs/</pre>
+       Now type <pre>   'forrest'</pre> to render your new site,
+       or <pre>   'forrest run'</pre>
+       to generate a <a href="http://localhost:8888/">webapp</a> then
+       experiment with editing docs in
+       <pre>   src/documentation/content/xdocs/</pre> and watch them be
+       instantly rendered.
+     </p>
 
    <p>For further information please read our 
    <a href="http://forrest.apache.org/docs/your-project.html">Getting Started</a>
