Add the "linking" demonstration and better "raw" demonstration.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36146 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/core/fresh-site/src/documentation/content/test2.html
+++ b/src/core/fresh-site/src/documentation/content/test2.html
@@ -14,10 +14,16 @@
   limitations under the License.
 -->
 <html>
-	<h1>Test 2</h1>
-	<p>
-	A linked-to-from-HTML page.
-	<hr />
-	[<a href="index.html">Index</a>] [<a href="test1.html">test1.html</a>]
-	</p>
+  <head>
+		<title>Raw un-processed HTML page (test2)</title>
+  </head>
+  <body>
+		<h1>Raw un-processed HTML page (test2)</h1>
+	  <p>
+	  This raw HTML document was linked to from another raw html document.
+	  <hr />
+	  [return to <a href="index.html">Index</a>]
+    [return to the linkee <a href="test1.html">test1.html</a>]
+	  </p>
+  </body>
 </html>
