--- a/src/core/fresh-site/src/documentation/content/samples/test3.html
+++ b/src/core/fresh-site/src/documentation/content/samples/test3.html
@@ -15,22 +15,19 @@
 -->
 <html>
   <head>
-		<title>Raw un-processed HTML page (test1)</title>
+		<title>Raw un-processed HTML page (test3)</title>
   </head>
-	<body>
-		<h1>raw un-processed HTML page (test1)</h1>
-		<p>
-		This raw HTML page is linked to from xdocs/samples/static.xml
-    and from xdocs/samples/linking.xml
-		</p>
-		<p>All linked-to pages (for example: 
-     <a href="test2.html">&lt;a href="test2.html"&gt;</a>) are
-		also available.
-    </p>
-		<hr />
+  <body>
+		<h1>Raw un-processed HTML page (test3)</h1>
+	  <p>
+		This raw HTML page is in a "raw content" sub-directory and
+    is linked to from xdocs/samples/linking.xml
+    and from xdocs/samples/static.xml
+	  </p>
+	  <hr />
     <p>
-		[return to <a href="index.html">Index</a>]<br>
-		[return to <a href="samples/linking.html">Linking demonstration</a>]
+	  [return to <a href="../index.html">Index</a>]<br>
+	  [return to <a href="linking.html">Linking demonstration</a>]
     </p>
-	</body>
+  </body>
 </html>
