Minor text tweaks.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@36164 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Please note that this HTML file was _not_ created by Forrest.
 -->
 <html>
    <head>
-      <title>Apache Forrest</title>
+      <title>Apache Forrest - quick start</title>
    </head>
 
    <body>
@@ -40,7 +40,11 @@ Please note that this HTML file was _not_ created by Forrest.
    <h2>What do I do now?</h2>
    <p>You are using a "source" distribution of Forrest. You need to first 
       build Forrest, by typing <pre>   'build.bat'</pre> (Windows)
-      or <pre>   './build.sh'</pre> (Unix).</p>
+      or <pre>   './build.sh'</pre> (Unix).
+      If you need more instructions, then see the
+      <a href="http://forrest.apache.org/build.html">Building Forrest</a>
+      document.
+   </p>
 
    <p>
      Follow the instructions to set environment variables FORREST_HOME and PATH.
@@ -48,11 +52,11 @@ Please note that this HTML file was _not_ created by Forrest.
 
    <p>Forrest is now ready to go! Here are three things to try ...</p>
    
-   <h3>Render the Forrest documentation</h3>
+   <h3>Render the Forrest core documentation</h3>
    <p>Simply type <pre>   'forrest'</pre> in this (Forrest's source distribution) 
       top-level directory. This will render the HTML and PDFs to
       <pre>   build/site/</pre>
-      Point your web browser to the index.html file there.
+      Point your web browser to the index.html file in that directory.
    </p>
 
     <h3>Run a webapp of the Forrest site</h3>
