--- a/tab-index.html
+++ b/tab-index.html
@@ -1,41 +1,33 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN""http://www.w3.org/TR/html4/loose.dtd">
-<div class="tab">
-<table summary="tab bar" border="0" cellpadding="0" cellspacing="0">
+<table border="0" cellpadding="0" cellspacing="0" class="tab">
 <tr>
-<td width="6"><img alt="" height="8" width="6" src="skin/images/spacer.gif"></td><td valign="bottom">
-<table summary="selected tab" style="height: 1.8em" border="0" cellpadding="0" cellspacing="0">
+<td class="tab pre-separator"></td><td class="tab selected top-left TSTL"></td><td class="tab selected"><a class="base-selected" href="index.html">Welcome</a></td><td class="tab selected top-right TSTR"></td><td class="tab separator"></td><td>
+<table border="0" cellpadding="0" cellspacing="0">
 <tr>
-<td valign="top" width="5" bgcolor="#4C6C8F"><img height="5" width="5" alt="" src="skin/images/tabSel-left.gif"></td><td valign="middle" bgcolor="#4C6C8F"><font color="#ffffff" size="2" face="Arial, Helvetica, Sans-serif"><b><a class="base-selected" href="index.html">Welcome</a></b></font></td><td valign="top" width="5" bgcolor="#4C6C8F"><img height="5" width="5" alt="" src="skin/images/tabSel-right.gif"></td>
+<td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="contrib.html">Project</a></td><td class="tab unselected top-right TUTR"></td>
+</tr>
+<tr>
+<td class="spacer" colspan="3"></td>
 </tr>
 </table>
-</td><td width="6"><img alt="" height="8" width="6" src="skin/images/spacer.gif"></td><td valign="bottom">
-<table summary="non selected tab" style="height: 1.6em" border="0" cellpadding="0" cellspacing="0">
+</td><td class="tab separator"></td><td>
+<table border="0" cellpadding="0" cellspacing="0">
 <tr>
-<td valign="top" width="5" bgcolor="#B2C4E0"><img height="5" width="5" alt="" src="skin/images/tab-left.gif"></td><td valign="middle" bgcolor="#B2C4E0"><a class="base-not-selected" href="contrib.html">Project</a></td><td valign="top" width="5" bgcolor="#B2C4E0"><img height="5" width="5" alt="" src="skin/images/tab-right.gif"></td>
+<td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="docs/your-project.html">Documentation</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td colspan="3" height="1"></td>
-</tr>
-</table>
-</td><td width="6"><img alt="" height="8" width="6" src="skin/images/spacer.gif"></td><td valign="bottom">
-<table summary="non selected tab" style="height: 1.6em" border="0" cellpadding="0" cellspacing="0">
-<tr>
-<td valign="top" width="5" bgcolor="#B2C4E0"><img height="5" width="5" alt="" src="skin/images/tab-left.gif"></td><td valign="middle" bgcolor="#B2C4E0"><a class="base-not-selected" href="docs/your-project.html">Documentation</a></td><td valign="top" width="5" bgcolor="#B2C4E0"><img height="5" width="5" alt="" src="skin/images/tab-right.gif"></td>
-</tr>
-<tr>
-<td colspan="3" height="1"></td>
+<td class="spacer" colspan="3"></td>
 </tr>
 </table>
-</td><td width="6"><img alt="" height="8" width="6" src="skin/images/spacer.gif"></td><td valign="bottom">
-<table summary="non selected tab" style="height: 1.6em" border="0" cellpadding="0" cellspacing="0">
+</td><td class="tab separator"></td><td>
+<table border="0" cellpadding="0" cellspacing="0">
 <tr>
-<td valign="top" width="5" bgcolor="#B2C4E0"><img height="5" width="5" alt="" src="skin/images/tab-left.gif"></td><td valign="middle" bgcolor="#B2C4E0"><a class="base-not-selected" href="howto/index.html">How-To</a></td><td valign="top" width="5" bgcolor="#B2C4E0"><img height="5" width="5" alt="" src="skin/images/tab-right.gif"></td>
+<td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="howto/index.html">How-To</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td colspan="3" height="1"></td>
+<td class="spacer" colspan="3"></td>
 </tr>
 </table>
 </td>
 </tr>
 </table>
-</div>
