--- a/entity/index.html
+++ b/entity/index.html
@@ -8,12 +8,12 @@
  <p>
   If you are here looking for the Apache Document DTDs
   then you shouldn't be :-)
-  See <a href="http://forrest.apache.org/catalog.html">Using Catalog Entity Resolver for local DTDs</a>.
+  See <a href="http://forrest.apache.org/docs/catalog.html">Using Catalog Entity Resolver for local DTDs</a>.
  </p>
                                                                                 
  <p>
   That said, you can find the relevant DTDs using the naming convention
-  "forrest.apache.org/dtd/document-v12.dtd" etc.
+  "forrest.apache.org/dtd/document-v13.dtd" etc.
  </p>
 </body>
 </html>
