--- a/license.html
+++ b/license.html
@@ -3,36 +3,36 @@
 <head>
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Apache License</title>
-<link type="text/css" href="skin/page.css" rel="stylesheet">
-<link type="text/css" href="skin/forrest.css" rel="stylesheet">
+<link rel="stylesheet" href="skin/page.css" type="text/css">
+<link rel="stylesheet" href="skin/forrest.css" type="text/css">
 <link rel="shortcut icon" href="favicon.ico">
-<script src="skin/fontsize.js" language="javascript" type="text/javascript"></script><script src="skin/menu.js" language="javascript" type="text/javascript"></script>
+<script type="text/javascript" language="javascript" src="skin/fontsize.js"></script><script type="text/javascript" language="javascript" src="skin/menu.js"></script>
 </head>
 <body onload="init()">
 <script type="text/javascript">ndeSetTextSize();</script>
-<table width="100%" border="0" cellpadding="0" cellspacing="0" class="header">
+<table class="header" cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
 <td>
 <div class="headerlogo">
-<a href="http://www.apache.org/"><img class="logoImage" alt="Apache" src="images/apache-forrest.png"></a>
+<a href="http://www.apache.org/"><img alt="Apache" class="logoImage" src="images/apache-forrest.png"></a>
 </div>
 </td><td align="center">
 <div class="headerlogo">
-<a href="http://forrest.apache.org/"><img class="logoImage" alt="Forrest" src="images/project-logo.gif"></a>
+<a href="http://forrest.apache.org/"><img alt="Forrest" class="logoImage" src="images/project-logo.gif"></a>
 </div>
-</td><td valign="top" rowspan="2" align="right" class="search">
-<form target="_blank" action="http://www.google.com/search" method="get">
-<table border="0" cellpadding="0" cellspacing="0" class="dialog">
+</td><td class="search" align="right" rowspan="2" valign="top">
+<form method="get" action="http://www.google.com/search" target="_blank">
+<table class="dialog" cellspacing="0" cellpadding="0" border="0">
 <tr>
-<td height="10" class="border" colspan="3"></td>
+<td colspan="3" class="border" height="10"></td>
 </tr>
 <tr>
-<td height="8" colspan="3"></td>
+<td colspan="3" height="8"></td>
 </tr>
 <tr>
-<td></td><td nowrap="nowrap"><input value="forrest.apache.org" name="as_sitesearch" type="hidden"><input size="15" name="as_q" id="query" type="text">
+<td></td><td nowrap="nowrap"><input type="hidden" name="as_sitesearch" value="forrest.apache.org"><input type="text" id="query" name="as_q" size="15">
 			&nbsp;
-			<input name="Search" value="Search" type="submit">
+			<input type="submit" value="Search" name="Search">
 <br>
 			the Apache Forrest site
 			
@@ -40,44 +40,44 @@
 		      </td><td></td>
 </tr>
 <tr>
-<td height="7" colspan="3"></td>
+<td colspan="3" height="7"></td>
 </tr>
 <tr>
 <td class="search border bottom-left SBBL"></td><td class="search border bottomborder"></td><td class="search border bottom-right SBBR"></td>
 </tr>
 </table>
 </form>
-</td><td height="10" width="10" align="right"><span class="textheader">Forrest</span></td>
+</td><td align="right" width="10" height="10"><span class="textheader">Forrest</span></td>
 </tr>
 <tr>
-<td class="tabstrip" colspan="4">
-<table border="0" cellpadding="0" cellspacing="0" class="tab">
+<td colspan="4" class="tabstrip">
+<table class="tab" cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td class="tab pre-separator"></td><td class="tab selected top-left TSTL"></td><td class="tab selected"><a class="base-selected" href="index.html">Welcome</a></td><td class="tab selected top-right TSTR"></td><td class="tab separator"></td><td>
-<table border="0" cellpadding="0" cellspacing="0">
+<table cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="contrib.html">Project</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td class="spacer" colspan="3"></td>
+<td colspan="3" class="spacer"></td>
 </tr>
 </table>
 </td><td class="tab separator"></td><td>
-<table border="0" cellpadding="0" cellspacing="0">
+<table cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="docs/your-project.html">Documentation</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td class="spacer" colspan="3"></td>
+<td colspan="3" class="spacer"></td>
 </tr>
 </table>
 </td><td class="tab separator"></td><td>
-<table border="0" cellpadding="0" cellspacing="0">
+<table cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="howto/index.html">How-To</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td class="spacer" colspan="3"></td>
+<td colspan="3" class="spacer"></td>
 </tr>
 </table>
 </td>
@@ -86,30 +86,30 @@
 </td>
 </tr>
 <tr>
-<td class="level2tabstrip" colspan="2"></td><td class="datenote level2tabstrip" colspan="2">
+<td colspan="2" class="level2tabstrip"></td><td colspan="2" class="datenote level2tabstrip">
 <div class="published">
-<script type="text/javascript" language="JavaScript"><!--
+<script language="JavaScript" type="text/javascript"><!--
               document.write("Published: " + document.lastModified);
               //  --></script>
 </div>
 </td>
 </tr>
 </table>
-<table width="100%" border="0" cellpadding="0" cellspacing="0">
+<table cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
 <td valign="top">
-<table class="menuarea" cellspacing="0" cellpadding="0">
+<table cellpadding="0" cellspacing="0" class="menuarea">
 <tr>
-<td width="6px" valign="top">
-<table border="0" cellpadding="0" cellspacing="0" class="leftpagemargin">
+<td valign="top" width="6px">
+<table class="leftpagemargin" cellspacing="0" cellpadding="0" border="0">
 <tr>
 <td class="subborder trail">&nbsp;</td>
 </tr>
 </table>
 </td><td class="dialog">
 <div class="menu">
-<div onclick="SwitchMenu('menu_selected_1.1')" id="menu_selected_1.1Title" class="menutitle">About</div>
-<div id="menu_selected_1.1" class="selectedmenuitemgroup">
+<div class="menutitle" id="menu_selected_1.1Title" onclick="SwitchMenu('menu_selected_1.1')">About</div>
+<div class="selectedmenuitemgroup" id="menu_selected_1.1">
 <div class="menuitem">
 <a href="index.html">Index</a>
 </div>
@@ -135,8 +135,8 @@
 <a href="live-sites.html">Example sites</a>
 </div>
 </div>
-<div onclick="SwitchMenu('menu_1.2')" id="menu_1.2Title" class="menutitle">Related projects</div>
-<div id="menu_1.2" class="menuitemgroup">
+<div class="menutitle" id="menu_1.2Title" onclick="SwitchMenu('menu_1.2')">Related projects</div>
+<div class="menuitemgroup" id="menu_1.2">
 <div class="menuitem">
 <a href="http://gump.apache.org/">Apache Gump</a>
 </div>
@@ -158,7 +158,7 @@
 </tr>
 <tr>
 <td></td><td>
-<table width="100%" border="0" cellpadding="0" cellspacing="0">
+<table cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
 <td class="border bottom-left"></td><td class="border bottomborder"></td><td class="border bottom-right"></td>
 </tr>
@@ -166,24 +166,28 @@
 </td>
 </tr>
 <tr>
-<td colspan="2" height="10"></td>
+<td height="10" colspan="2"></td>
 </tr>
 </table>
-</td><td width="100%" valign="top">
-<table width="100%" border="0" cellpadding="0" cellspacing="0">
+</td><td valign="top" width="100%">
+<table cellspacing="0" cellpadding="0" border="0" width="100%">
 <tr>
 <td class="subborder trail">
-	         &nbsp;<a href="http://www.apache.org/">apache</a> &gt; <a href="http://forrest.apache.org/">forrest</a><script src="skin/breadcrumbs.js" language="JavaScript" type="text/javascript"></script>&nbsp;
-          </td><td nowrap="nowrap" align="right" class="subborder trail"></td>
+	         &nbsp;<a href="http://www.apache.org/">apache</a> &gt; <a href="http://forrest.apache.org/">forrest</a><script type="text/javascript" language="JavaScript" src="skin/breadcrumbs.js"></script>&nbsp;
+          </td><td class="subborder trail" align="right" nowrap="nowrap">
+	        Font size: 
+	          &nbsp;<input type="button" onclick="ndeSetTextSize('reset'); return false;" title="Reset text" class="resetfont" value="Reset">      
+	          &nbsp;<input type="button" onclick="ndeSetTextSize('decr'); return false;" title="Shrink text" class="smallerfont" value="-a">
+	          &nbsp;<input type="button" onclick="ndeSetTextSize('incr'); return false;" title="Enlarge text" class="biggerfont" value="+a"></td>
 </tr>
 <tr>
-<td colspan="2" align="left">
+<td align="left" colspan="2">
 <div class="content">
 <table class="title">
 <tr>
 <td valign="middle">
 <h1>Apache License</h1>
-</td><td nowrap="nowrap" width="40" align="center"><a class="dida" href="license.pdf"><img alt="PDF" src="skin/images/pdfdoc.gif" class="skin"><br>
+</td><td align="center" width="40" nowrap="nowrap"><a href="license.pdf" class="dida"><img class="skin" src="skin/images/pdfdoc.gif" alt="PDF"><br>
         PDF</a></td>
 </tr>
 </table>
@@ -416,14 +420,14 @@
 </table>
 <table class="footer">
 <tr>
-<td colspan="2" align="center" width="90%"><span class="footnote"><a href="http://www.apache.org/licenses/">
+<td width="90%" align="center" colspan="2"><span class="footnote"><a href="http://www.apache.org/licenses/">
                 Copyright &copy; 2002-2004&nbsp;
                 The Apache Software Foundation.</a>
             All rights reserved.
             <br>
-<script type="text/javascript" language="JavaScript"><!--
+<script language="JavaScript" type="text/javascript"><!--
               document.write(" - "+"Last Published: " + document.lastModified);
-              //  --></script></span></td><td nowrap="nowrap" align="right" class="logos"></td>
+              //  --></script></span></td><td class="logos" align="right" nowrap="nowrap"></td>
 </tr>
 </table>
 </body>
