--- a/tab-index.html
+++ b/tab-index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN""http://www.w3.org/TR/html4/loose.dtd">
-<table class="tab" cellspacing="0" cellpadding="0" border="0">
+<table border="0" cellpadding="0" cellspacing="0" class="tab">
 <tr>
 <td class="tab pre-separator"></td><td class="tab selected top-left TSTL"></td><td class="tab selected"><a class="base-selected" href="index.html">Welcome</a></td><td class="tab selected top-right TSTR"></td><td class="tab separator"></td><td>
-<table cellspacing="0" cellpadding="0" border="0">
+<table border="0" cellpadding="0" cellspacing="0">
 <tr>
 <td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="contrib.html">Project</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td colspan="3" class="spacer"></td>
+<td class="spacer" colspan="3"></td>
 </tr>
 </table>
 </td><td class="tab separator"></td><td>
-<table cellspacing="0" cellpadding="0" border="0">
+<table border="0" cellpadding="0" cellspacing="0">
 <tr>
 <td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="docs/your-project.html">Documentation</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td colspan="3" class="spacer"></td>
+<td class="spacer" colspan="3"></td>
 </tr>
 </table>
 </td><td class="tab separator"></td><td>
-<table cellspacing="0" cellpadding="0" border="0">
+<table border="0" cellpadding="0" cellspacing="0">
 <tr>
 <td class="tab unselected top-left TUTL"></td><td class="tab unselected corner"><a class="base-not-selected" href="howto/index.html">How-To</a></td><td class="tab unselected top-right TUTR"></td>
 </tr>
 <tr>
-<td colspan="3" class="spacer"></td>
+<td class="spacer" colspan="3"></td>
 </tr>
 </table>
 </td>
