Add the "font size" controller. Some other skin tweaks.
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@43573 13f79535-47bb-0310-9956-ffa450edef68

--- a/body-index.html
+++ b/body-index.html
@@ -32,6 +32,7 @@
 <div id="skinconf-podlink"></div>
 <div id="skinconf-txtlink"></div>
 <div id="skinconf-pdflink"></div>
+<div id="disable-font-script"></div>
 <h1>Welcome to Apache Forrest</h1>
 <div id="skinconf-toc-page"></div> 
     
