Update whole site. Fix search. Was doing whole Internet. Fix floating search box. Fix level2tabs and SwitchMenu().
git-svn-id: https://svn.apache.org/repos/asf/forrest/site@46238 13f79535-47bb-0310-9956-ffa450edef68

--- a/body-index.html
+++ b/body-index.html
@@ -236,13 +236,16 @@
 <p>
           The <a href="/">Forrest website</a> is updated
           manually as needed, while we develop the 
-          <a href="docs/forrestbot.html">forrestbot</a> facility which produces the
-          <a href="http://forrestbot.cocoondev.org/">automatically
-            generated</a> site.
+          <a href="docs/forrestbot.html">forrestbot</a> facility.
+           <!-- FIXME: It is out-of-date.
+           which produces the
+          <link href="http://forrestbot.cocoondev.org/">automatically
+            generated</link> site.
+            -->
         </p>
 </div>
     
-<a name="N10105"></a><a name="News+and+events"></a>
+<a name="N10103"></a><a name="News+and+events"></a>
 <div class="skinconf-heading-1">
 <h1>News and events</h1>  test - 
         </div>
@@ -263,7 +266,7 @@
 </ul>
 </div>
     
-<a name="N10115"></a><a name="Help+Wanted%21"></a>
+<a name="N10113"></a><a name="Help+Wanted%21"></a>
 <div class="skinconf-heading-1">
 <h1>Help Wanted!</h1>  test - 
         </div>
