--- a/todo.html
+++ b/todo.html
@@ -147,7 +147,7 @@
 <a href="http://xml.apache.org/">Apache XML</a>
 </div>
 <div class="menuitem">
-<a href="http://www.apache.org/~vgritsenko/stats/">Apache Stats</a>
+<a href="http://www.apache.org/~vgritsenko/stats/">Statistics</a>
 </div>
 </div>
 <div id="credit"></div>
