Quick start notes are simpler now.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@47252 13f79535-47bb-0310-9956-ffa450edef68

--- a/index.html
+++ b/index.html
@@ -32,35 +32,36 @@ Please note that this HTML file was _not_ created by Forrest.
    <hr />
 
    <h2>What is this?</h2>
-   <p>Forrest is an XML standards-oriented documentation framework 
+   <p>Apache Forrest is an XML standards-oriented documentation framework 
       based on Apache Cocoon, providing XSLT stylesheets and schemas, images 
       and other resources. Forrest uses these to render the XML source content 
       into a website via command-line, robot, or a dynamic web application.</p>
 
    <h2>What do I do now?</h2>
-   <p>You are using a "source" distribution of Forrest. You need to first 
-      build Forrest, by typing <pre>   'build.bat'</pre> (Windows)
-      or <pre>   './build.sh'</pre> (Unix).
+   <p>With a downloaded distribution, Forrest is already built. Just set the
+     environment variables for convenience: FORREST_HOME to point to src/core
+     and add FORREST_HOME/bin to your PATH.
+   </p>
+   <p>The source code is also provided, so you can change it and re-build
+      by typing <tt>'build.bat'</tt> (Windows)
+      or <tt>'./build.sh'</tt> (Unix).
       If you need more instructions, then see the
       <a href="http://forrest.apache.org/build.html">Building Forrest</a>
       document.
    </p>
 
-   <p>
-     Follow the instructions to set environment variables FORREST_HOME and PATH.
-   </p>
-
-   <p>Forrest is now ready to go! Here are three things to try ...</p>
+   <p>Forrest is ready to go! Here are some things to try ...</p>
    
    <h3>Render the Forrest core documentation</h3>
-   <p>Simply type <pre>   'forrest'</pre> in this (Forrest's source distribution) 
-      top-level directory. This will render the HTML and PDFs to
-      <pre>   build/site/</pre>
-      Point your web browser to the index.html file in that directory.
+   <p>Simply type <tt>'forrest'</tt> in this
+      top-level directory. This will render the HTML and PDFs for the Forrest
+      documentation into the
+      <tt>build/site/</tt> directory.
+      Point your web browser to the index.html file.
    </p>
 
     <h3>Run a webapp of the Forrest site</h3>
-    <p>Type <pre>   'forrest run'</pre> in this top-level directory.
+    <p>Type <tt>'forrest run'</tt> in this top-level directory.
       You can then point your browser to 
       <a href="http://localhost:8888/">http://localhost:8888/</a>
       and view the Forrest website generated dynamically.
@@ -68,17 +69,24 @@ Please note that this HTML file was _not_ created by Forrest.
 
       <h3>Generate your own site</h3>
       <p>Create a new (empty) directory in your home space, cd to it, and type
-       <pre>   'forrest seed'</pre> 
-       This will generate a skeleton directory structure and template XML. 
-       If you like, edit the XML in
-       <pre>   src/documentation/content/xdocs/</pre>
-       Now type <pre>   'forrest'</pre> to render your new site,
-       or <pre>   'forrest run'</pre>
+       <tt>'forrest seed'</tt>
+       which will generate a skeleton directory structure and template XML. 
+       If you like, edit the XML in the
+       <tt>src/documentation/content/xdocs/</tt> directory.
+       Now type <tt>'forrest'</tt> to render your new site,
+       or <tt>'forrest run'</tt>
        to generate a <a href="http://localhost:8888/">webapp</a> then
        experiment with editing docs in
-       <pre>   src/documentation/content/xdocs/</pre> and watch them be
+       <tt>src/documentation/content/xdocs/</tt> and watch them be
        instantly rendered.
      </p>
+
+  <h2>Further information</h2>
+
+  <p>
+  Type 'forrest -projecthelp' to list the available Forrest commands.
+  NOTE: use the 'forrest.bat' version when running under Cygwin!
+  </p>
 
    <p>For further information please read our 
    <a href="http://forrest.apache.org/docs/your-project.html">Getting Started</a>
@@ -89,6 +97,6 @@ Please note that this HTML file was _not_ created by Forrest.
 
    <hr />
 
-   <p>Copyright 2002-2004 Apache Software Foundation. All rights reserved.</p></body>
+   <p>Copyright 2002-2004 Apache Software Foundation. All rights reserved.</p>
+  </body>
 </html>
-
